--- a/style.css
+++ b/style.css
@@ -180,13 +180,44 @@ background-color:#645896;
     border-right:1px solid #fff;
 }
 
+.bottom-bg{
+    padding: 25px;
+    background: url(images/bg-bottom.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+}
 
+.triangle-down {
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #fff;
+    position: absolute;
+    left: 1rem;
+}
 
+.triangle-left {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-right: 15px solid #fff;
+    position: absolute;
+    right: 0;
+    top: 40%;
+}
 
-
-
-
-
+.triangle-right {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid #fff;
+    position: absolute;
+    left: 0;
+    top: 40%;
+}
 
 
 
