--- a/style.css
+++ b/style.css
@@ -219,5 +219,26 @@ background-color:#645896;
     top: 40%;
 }
 
+.no-padding{padding: 0;}
+
+.no-padding-right {padding-right: 0;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
